--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "noImplicitAny": false, // 👈 added this line
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
