--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-  
   "dependencies": {
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "2.57.4",
@@ -16,6 +15,7 @@
     "next": "^15.5.3",
     "node-html-parser": "^7.0.1",
     "ogl": "^1.0.11",
+    "pdf-parse": "^1.1.1",
     "pdf-poppler": "^0.2.1",
     "pdf2pic": "^3.2.0",
     "puppeteer": "^24.22.0",
