--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "2.57.4",
     "@types/ws": "^8.18.1",
     "cheerio": "^1.1.2",
+    "critters": "^0.0.23",
     "next": "^15.5.3",
     "node-html-parser": "^7.0.1",
     "ogl": "^1.0.11",
@@ -34,12 +35,12 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^15.0.0",
     "@testing-library/user-event": "^14.5.1",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "babel-jest": "^29.7.0",
     "daisyui": "^5.1.12",
     "eslint": "^9",
