--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^15.5.3",
     "node-html-parser": "^7.0.1",
     "ogl": "^1.0.11",
+    "openai": "^6.3.0",
     "pdf-parse": "^1.1.1",
     "pdf-poppler": "^0.2.1",
     "pdf2pic": "^3.2.0",
