--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "node-html-parser": "^7.0.1",
     "ogl": "^1.0.11",
     "openai": "^6.3.0",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "pdf-poppler": "^0.2.3",
     "pdf2pic": "^3.2.0",
     "puppeteer": "^24.22.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sharp": "^0.34.4",
     "ws": "^8.18.3",
     "youtube-transcript": "^1.2.1"
   },
