--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "2.57.4",
     "@types/three": "^0.180.0",
+    "@types/uuid": "^10.0.0",
     "@types/ws": "^8.18.1",
     "cheerio": "^1.1.2",
     "critters": "^0.0.23",
@@ -33,6 +34,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sharp": "^0.34.4",
+    "uuid": "^13.0.0",
     "ws": "^8.18.3",
     "youtube-transcript": "^1.2.1"
   },
