--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "ogl": "^1.0.11",
     "openai": "^6.3.0",
     "pdf-lib": "^1.17.1",
-    "pdf-parse": "^1.1.1",
     "pdf-poppler": "^0.2.3",
     "pdf2pic": "^3.2.0",
+    "pdfjs-dist": "^5.4.296",
     "puppeteer": "^24.22.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
