--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ogl": "^1.0.11",
     "openai": "^6.3.0",
     "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.4.5",
     "pdf-poppler": "^0.2.3",
     "pdf2pic": "^3.2.0",
     "pdfjs-dist": "^5.4.296",
