--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
     "pdf-poppler": "^0.2.3",
+    "pdf2json": "^4.0.0",
     "pdf2pic": "^3.2.0",
     "pdfjs-dist": "^5.4.296",
     "puppeteer": "^24.22.0",
