fix: Resolve all build errors and TypeScript issues
🔧 Build Fixes:
- Fixed import statement placement in EnhancedQuiz.tsx
- Removed JSX from iconPalette.ts utility file
- Fixed Next.js 15 API route params (now Promise-based)
- Fixed Buffer type conversion in PDF exporter
- Removed reviewHistory from StudyProgress type definitions
- Fixed difficulty level mapping in AI generator
- Replaced react-syntax-highlighter with simple code blocks

✅ Build Status:
- All TypeScript errors resolved
- Build completes successfully
- All 94 pages generated without errors
- Enhanced quiz page: 53.8 kB (233 kB First Load JS)
- Professional icon system working correctly

🚀 Ready for Production:
- Complete premium AI study pack system
- Professional Lucide React icons throughout
- All components properly typed and functional
- Build optimized for production deployment

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "puppeteer": "^24.22.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "refractor": "^5.0.0",
     "sharp": "^0.34.4",
     "uuid": "^13.0.0",
     "ws": "^8.18.3",
