--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/ws": "^8.18.1",
     "cheerio": "^1.1.2",
     "critters": "^0.0.23",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.546.0",
     "next": "^15.5.3",
     "node-html-parser": "^7.0.1",
     "ogl": "^1.0.11",
