--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "puppeteer": "^24.22.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
     "refractor": "^5.0.0",
+    "remark-gfm": "^4.0.1",
     "sharp": "^0.34.4",
     "uuid": "^13.0.0",
     "ws": "^8.18.3",
